# BestDocumenter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
config/: best_documenter.json  best_documenter.json.example
src/: best_documenter.cpp
src/best_documenter/: config.cpp  config.h  counter.cpp  counter.h  duration.cpp  duration.h  parser.cpp  parser.h
src/best_documenter/model/: config.h  result.h
src/github/: client.cpp  client.h
src/github/response/: account.h  author.h  git_reference.h  github_commit.h  github_commit_file.h  user.h  util.h
src/http/: client.cpp  client.h  header.cpp  header.h  response.cpp  response.h  rfc5988.cpp  rfc5988.h
src/http/rfc5988/: model.cpp  model.h
test/http/: header.cpp  rfc5988.cpp
